# cli-clone

./: .gitignore  Cargo.toml  database.db  readme.md  todo.md
src/: main.rs
src/binaries/: cat.rs  cd.rs  echo.rs  ls.rs  man.rs  mod.rs  pwd.rs  touch.rs
src/binaries/counter/: app.rs  handler.rs  mod.rs  ui.rs
src/binaries/json/: app.rs  mod.rs  ui.rs
src/binaries/timer/: app.rs  handler.rs  mod.rs  ui.rs
src/binaries/todo/: mod.rs
src/cmd/: mod.rs
src/event/: mod.rs
src/ui/: tui.rs
