[package]
name = "cli-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
colored = "2.1.0"
console = "0.15.8"
crossterm = "0.27.0"
ratatui = "0.26.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0.115"
